--- a/240522_prc.ipynb
+++ b/240522_prc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
     "    f = h5py.File(file, 'r')\n",
     "    PartType1 = f['PartType1']\n",
     "    dm_pos = PartType1[\"Coordinates\"][:]\n",
-    "    dm_pos = dm_pos*0.001\n",
+    "    dm_pos = dm_pos*0.001 # kpc -> Mpc 단위 변경\n",
     "    dm_pos = dm_pos.astype(np.int32) # 데이터 타입 변경\n",
     "    \n",
     "    len_df.append(len(dm_pos))\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "9              79             166  26350445  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
