--- a/240522_prc.ipynb
+++ b/240522_prc.ipynb
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "basePath = '../tng_local/'\n",
-    "snapshot_file_path = glob.glob(f\"../tng_local/snapshot-99.*.hdf5\")"
+    "win_snapshot_file_path = glob.glob(f\"../tng_local/snapshot-99.*.hdf5\")\n",
+    "seondeok_snapshot_file_path = glob.glob(f\"../tng/tng_99_240425/tng_local/snapshot-99.*.hdf5\")"
    ]
   },
   {
